--- a/AutomobileRepairShop/Views/Shared/Register.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Register.cshtml
@@ -1,6 +1,8 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model AutomobileRepairShop.Models.User
+
 @{
 <!DOCTYPE html>
 <html>
@@ -15,50 +17,60 @@
                 </div>
 
                 <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+                    
+                @using (Html.BeginForm("Welcome", "Registration", FormMethod.Post)){
+                    <!-- registration form -->
+                    <!-- <form style="width: 23rem;"> -->
 
-                    <form style="width: 23rem;">
-
+                        <!-- "Register" title -->
                         <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Register</h3>
                         
+                        <!-- Name input & label -->
                         <div class="form-outline mb-4">
-                            <input type="name" id="name" class="form-control form-control-lg" />
+                            <input asp-for="Name" type="name" for="name" class="form-control form-control-lg" />
                             <label class="form-label" for="name">Name</label>
                         </div>
-
+                        
+                        <!-- Surname input & label -->
                        <div class="form-outline mb-4">
-                            <input type="surname" id="surname" class="form-control form-control-lg" />
+                            <input asp-for="Surname" type="surname" id="surname" class="form-control form-control-lg" />
                             <label class="form-label" for="surname">Surname</label>
                         </div>
-
+                        
+                        <!-- Address input & label -->
                        <div class="form-outline mb-4">
-                            <input type="address" id="address" class="form-control form-control-lg" />
+                            <input asp-for="Address" type="address" id="address" class="form-control form-control-lg" />
                             <label class="form-label" for="address">Address</label>
                         </div>
 
-                        
+                        <!-- Birthday input & label -->
                        <div class="form-outline mb-4">
-                            <input type="date" id="birthday" class="form-control form-control-lg" />
+                            <input asp-for="Age" type="date" id="birthday" class="form-control form-control-lg" />
                             <label class="form-label" for="birthday">Birthday</label>
                         </div>
 
+                        <!-- Email input & label -->
                         <div class="form-outline mb-4">
                             <input type="email" id="email" class="form-control form-control-lg" />
                             <label class="form-label" for="email">Email address</label>
                         </div>
 
+                        <!-- Password input & label -->
                         <div class="form-outline mb-4">
                             <input type="password" id="password" class="form-control form-control-lg" />
                             <label class="form-label" for="password">Password</label>
                         </div>
 
+                        <!-- Submit button -->
                         <div class="pt-1 mb-4">
-                            <button class="btn btn-info btn-lg btn-block" type="button">Register</button>
+                            <button class="btn btn-info btn-lg btn-block" type="submit">Register</button>
                         </div>
 
+                        <!-- Login redirect  -->
                         <p>Already have an account? <a href="/Home/Login" class="link-info">Login here</a></p>
 
-                    </form>
-
+                    <!-- </form> --><!--end of form  -->
+                    }
                 </div>
 
             </div>
