--- a/AutomobileRepairShop/Views/Shared/Register.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Register.cshtml
@@ -18,9 +18,8 @@
 
                 <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
                     
-                @using (Html.BeginForm("Login", "Registration", FormMethod.Post)){
                     <!-- registration form -->
-                    <!-- <form style="width: 23rem;"> -->
+                    <form asp-controller="Registration" asp-action="Register" method="post" style="width: 23rem;">
 
                         <!-- "Register" title -->
                         <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Register</h3>
@@ -51,6 +50,7 @@
 
                         <!-- Email input & label -->
                         <div class="form-outline mb-4">
+                        @ViewBag.EmailExists  <!-- To customise -->
                             <input asp-for="Email" type="email" id="email" class="form-control form-control-lg" />
                             <label class="form-label" for="email">Email address</label>
                         </div>
@@ -69,8 +69,8 @@
                         <!-- Login redirect  -->
                         <p>Already have an account? <a href="/Home/Login" class="link-info">Login here</a></p>
 
-                    <!-- </form> --><!--end of form  -->
-                    }
+                    </form> <!--end of form  -->
+                    
                 </div>
 
             </div>
