--- a/AutomobileRepairShop/Views/Shared/Login.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@model AutomobileRepairShop.Models.User
+
 @{
 <!DOCTYPE html>
 <html>
@@ -16,22 +18,24 @@
 
                 <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
 
-                    <form style="width: 23rem;">
+                    <form asp-controller="Loginn" asp-action="Login" method="post" style="width: 23rem;">
 
                         <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3>
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control form-control-lg" />
+                        @ViewBag.EmailNotExists
+                            <input asp-for="Email" type="email" id="email" class="form-control form-control-lg" />
                             <label class="form-label" for="email">Email address</label>
                         </div>
 
                         <div class="form-outline mb-4">
-                            <input type="password" id="password" class="form-control form-control-lg" />
+                        @ViewBag.WrongPassword
+                            <input asp-for="Password" type="password" id="password" class="form-control form-control-lg" />
                             <label class="form-label" for="password">Password</label>
                         </div>
 
                         <div class="pt-1 mb-4">
-                            <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
+                            <button class="btn btn-info btn-lg btn-block" type="submit">Login</button>
                         </div>
 
                         <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
