--- a/AutomobileRepairShop/Views/Shared/_Layout.cshtml
+++ b/AutomobileRepairShop/Views/Shared/_Layout.cshtml
@@ -33,6 +33,8 @@
                                 <li><a class="dropdown-item" asp-controller="Home" asp-action="AddEmployee">Add employee</a></li>
                                 <li><a class="dropdown-item" asp-controller="Home" asp-action="EditAccounts">Edit existing accounts</a></li>
                             </ul>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Bills">Bills</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto flex-nowrap">
