--- a/AutomobileRepairShop/Views/Shared/_Layout.cshtml
+++ b/AutomobileRepairShop/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Bills">Bills</a>
                         </li>
+                                                <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Appointments">Make an appointment</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto flex-nowrap">
                         <li class="nav-item">
