--- a/AutomobileRepairShop/Views/Shared/EditAccounts.cshtml
+++ b/AutomobileRepairShop/Views/Shared/EditAccounts.cshtml
@@ -1,145 +1,163 @@
 ﻿@model List<AutomobileRepairShop.Models.User>
 
 @{
-<!DOCTYPE html>
-<html>
-<section class="vh-100">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-6 text-black">
+    <!DOCTYPE html>
+    <html>
+    <section class="vh-100">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-6 text-black">
 
-                <div class="px-5 ms-xl-4">
-                    <i class="fas fa-crow fa-2x pt-5 mt-xl-4" style="color: #709085;"></i>
-                    <span class="h1  mb-0">Edit existing accounts</span>
-                </div>
+                    <div class="px-5 ms-xl-4">
+                        <i class="fas fa-crow fa-2x pt-5 mt-xl-4" style="color: #709085;"></i>
+                        <span class="h1  mb-0">Edit existing accounts</span>
+                    </div>
 
-                <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+                    <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
 
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th scope="col">Id</th>
-                                <th scope="col">Name</th>
-                                <th scope="col">Surname</th>
-                                <th scope="col">Address</th>
-                                <th scope="col">Birthday</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">IdRole</th>
-                                <th scope="col">IdDepartment</th>
-                                <th scope="col">Edit</th>
-                                <th scope="col">Delete</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model){
-                            <tr>
-                                <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Name)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Surname)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Address)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Birthday)</td>
-                                <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                                <td>@Html.DisplayFor(modelItem => item.IdRole)</td>
-                                <td>@Html.DisplayFor(modelItem => item.IdDepartment)</td>
-                                <td><button type="button" class="btn btn-outline-info" data-bs-toggle="modal"
-                                        data-bs-target="#editModal">Edit</button< /td>
-                                <td><button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
-                                        data-bs-target="#deleteModal">Delete</button></td>
-                            </tr>
-                            }
-                        </tbody>
-                    </table>
-                </div>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Id</th>
+                                    <th scope="col">Name</th>
+                                    <th scope="col">Surname</th>
+                                    <th scope="col">Address</th>
+                                    <th scope="col">Birthday</th>
+                                    <th scope="col">Email</th>
+                                    <th scope="col">IdRole</th>
+                                    <th scope="col">IdDepartment</th>
+                                    <th scope="col">Edit</th>
+                                    <th scope="col">Delete</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Surname)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Birthday)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.IdRole)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.IdDepartment)</td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <button type="button" class="btn btn-outline-info" data-bs-toggle="modal"
+                            data-bs-target="#editModal">
+                        Edit
+                    </button>
+                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                            data-bs-target="#deleteModal">
+                        Delete
+                    </button>
 
-                <!-- Edit Modal -->
-                <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Edit information</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
 
-                            <div class="modal-body">
+                    <!-- Edit Modal -->
+                    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel"
+                         aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Edit information</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
 
-                                <!-- edit form -->
-                                <form asp-controller="Edit" asp-action="Edit" method="post" style="width: 23rem;">
+                                <div class="modal-body">
 
-                                    <!-- Name input & label -->
-                                    <div class="form-outline mb-4">
-                                        <input name="Name" type="name" for="name"
-                                            class="form-control form-control-lg" />
-                                        <label class="form-label" for="name">Name</label>
-                                    </div>
+                                    <!-- edit form -->
+                                    <form asp-controller="Edit" asp-action="Edit" method="post" style="width: 23rem;">
 
-                                    <!-- Surname input & label -->
-                                    <div class="form-outline mb-4">
-                                        <input name="Surname" type="surname" id="surname"
-                                            class="form-control form-control-lg" />
-                                        <label class="form-label" for="surname">Surname</label>
-                                    </div>
+                                        <div class="form-outline mb-4">
+                                            <input name="Id" type="name" for="id"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="id">User Id</label>
+                                        </div>
+                                        <!-- Name input & label -->
+                                        <div class="form-outline mb-4">
+                                            <input name="Name" type="name" for="name"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="name">Name</label>
+                                        </div>
 
-                                    <!-- Address input & label -->
-                                    <div class="form-outline mb-4">
-                                        <input name="Address" type="address" id="address"
-                                            class="form-control form-control-lg" />
-                                        <label class="form-label" for="address">Address</label>
-                                    </div>
+                                        <!-- Surname input & label -->
+                                        <div class="form-outline mb-4">
+                                            <input name="Surname" type="surname" id="surname"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="surname">Surname</label>
+                                        </div>
 
-                                    <!-- Birthday input & label -->
-                                    <div class="form-outline mb-4">
-                                        <input name="Birthday" type="date" id="birthday"
-                                            class="form-control form-control-lg" />
-                                        <label class="form-label" for="birthday">Birthday</label>
-                                    </div>
+                                        <!-- Address input & label -->
+                                        <div class="form-outline mb-4">
+                                            <input name="Address" type="address" id="address"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="address">Address</label>
+                                        </div>
 
-                                    <!-- Email input & label -->
-                                    <div class="form-outline mb-4">
-                                        @ViewBag.EmailExists
-                                        <!-- To customise -->
-                                        <input name="Email" type="email" id="email"
-                                            class="form-control form-control-lg" />
-                                        <label class="form-label" for="email">Email address</label>
-                                    </div>
-                                </form>
-                                <!--end of form  -->
-                            </div>
+                                        <!-- Birthday input & label -->
+                                        <div class="form-outline mb-4">
+                                            <input name="Birthday" type="date" id="birthday"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="birthday">Birthday</label>
+                                        </div>
 
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary"
-                                    data-bs-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
+                                        <!-- Email input & label -->
+                                        <div class="form-outline mb-4">
+                                            @ViewBag.EmailExists
+                                            <!-- To customise -->
+                                            <input name="Email" type="email" id="email"
+                                                   class="form-control form-control-lg" />
+                                            <label class="form-label" for="email">Email address</label>
+                                        </div>
+                                    </form>
+                                    <!--end of form  -->
+                                </div>
+
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">
+                                        Close
+                                    </button>
+                                    <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
-                <!-- Delete Modal -->
-                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Are you sure you want to delete the
-                                    user?</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                                <button type="button" class="btn btn-primary">Yes</button>
+                    <!-- Delete Modal -->
+                    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+                         aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <div class="form-outline mb-4">
+                                        <input name="Id" type="name" for="id"
+                                               class="form-control form-control-lg" />
+                                        <label class="form-label" for="id">User Id</label>
+                                    </div>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-primary">Delete</button>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
         </div>
-    </div>
 
-</section>
+    </section>
 
-</html>
+    </html>
 }
