--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -1,5 +1,51 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<AutomobileRepairShop.Models.CarPart>
+
 @{
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    </head>
+    <body>
+        <div class="container-fluid">
+            <input class="form-control" id="partInput" type="text" placeholder="Search part...">
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">DepartmentID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Labour Description</th>
+                        <th scope="col">Labour Price</th>
+                        <th scope="col">Add to Bill</th>
+                    </tr>
+                </thead>
+                <tbody id="partTable">
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                            <td>@Html.DisplayFor(modelItem => item.DepartmentId)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                            <td>$@Html.DisplayFor(modelItem => item.Price)</td>
+                            <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
+                            <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
+                            <td><button type="button" class="btn btn-outline-info">Add</button></td>
+                        </tr>
+                    }
+                </tbody>
+        </div>
+        <script>
+            $(document).ready(function(){
+              $("#partInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#partTable tr").filter(function() {
+                  $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+              });
+            });
+        </script>
+    </body>
+    </html>
 }
