Small changes to employee view

--- a/AutomobileRepairShop/Views/Shared/AddEmployee.cshtml
+++ b/AutomobileRepairShop/Views/Shared/AddEmployee.cshtml
@@ -21,6 +21,12 @@
                                 <label class="form-label" for="name">Name</label>
                             </div>
 
+                            <!-- Name input & label -->
+                            <div class="form-outline mb-4">
+                                <input asp-for="IdDepartment" type="iddepartment" for="iddepartment" class="form-control form-control-lg" />
+                                <label class="form-label" for="iddepartment">Department ID</label>
+                            </div>
+
                             <!-- Surname input & label -->
                             <div class="form-outline mb-4">
                                 <input asp-for="Surname" type="surname" id="surname" class="form-control form-control-lg" />
