--- a/AutomobileRepairShop/Views/Shared/EditAccounts.cshtml
+++ b/AutomobileRepairShop/Views/Shared/EditAccounts.cshtml
@@ -26,8 +26,6 @@
                                     <th scope="col">Email</th>
                                     <th scope="col">IdRole</th>
                                     <th scope="col">IdDepartment</th>
-                                    <th scope="col">Edit</th>
-                                    <th scope="col">Delete</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -42,21 +40,23 @@
                                         <td>@Html.DisplayFor(modelItem => item.Email)</td>
                                         <td>@Html.DisplayFor(modelItem => item.IdRole)</td>
                                         <td>@Html.DisplayFor(modelItem => item.IdDepartment)</td>
-                                        <td></td>
-                                        <td></td>
                                     </tr>
                                 }
                             </tbody>
                         </table>
                     </div>
-                    <button type="button" class="btn btn-outline-info" data-bs-toggle="modal"
-                            data-bs-target="#editModal">
-                        Edit
-                    </button>
-                    <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
-                            data-bs-target="#deleteModal">
-                        Delete
-                    </button>
+
+                    <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+                        <button type="button" class="btn btn-outline-info" data-bs-toggle="modal"
+                                data-bs-target="#editModal">
+                            Edit
+                        </button>
+                        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal"
+                                data-bs-target="#deleteModal">
+                            Delete
+                        </button>
+                    </div>
+
 
 
                     <!-- Edit Modal -->
