--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -34,11 +34,12 @@
                             <td>$@Html.DisplayFor(modelItem => item.Price)</td>
                             <td>@Html.DisplayFor(modelItem => item.LaborName)</td>
                             <td>$@Html.DisplayFor(modelItem => item.LaborPrice)</td>
-                            <td><button type="button" class="btn btn-outline-info" id = "addBtn">Add</button></td>
+                            <td><button type="button" class="btn btn-outline-info" asp-action="AddItem" asp-controller="Employee">Add</button></td>
                         </tr>
                     }
                 </tbody>
         </div>
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
