--- a/AutomobileRepairShop/Views/Shared/Appointments.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Appointments.cshtml
@@ -16,7 +16,7 @@
                         <input asp-for="Appointment.Date" type="date" for="date" class="form-control form-control-lg" />
                      </div>
 
-                     <h4 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Introduce your car information</h4>
+                     <h4 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Introduce your car information:</h4>
 
                      <div class="form-outline mb-4">
                         <label class="form-label" for="brand">Brand:</label>
