--- a/AutomobileRepairShop/Views/Shared/Appointments.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Appointments.cshtml
@@ -13,24 +13,24 @@
                     <h4 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Select the date:</h4>
                      <!-- Date -->
                      <div class="form-outline mb-4">
-                        <input asp-for="Appointment.Date" type="date" for="date" class="form-control form-control-lg" />
+                        <input asp-for="Appointment.Date" type="date" for="date" class="form-control form-control-lg" required/>
                      </div>
 
                      <h4 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Introduce your car information:</h4>
 
                      <div class="form-outline mb-4">
                         <label class="form-label" for="brand">Brand:</label>
-                        <input asp-for="Car.Brand" type="brand" for="brand" class="form-control form-control-lg"/>
+                        <input asp-for="Car.Brand" type="brand" for="brand" class="form-control form-control-lg" required/>
                      </div>
 
                      <div class="form-outline mb-4">
                         <label class="form-label" for="model">Model:</label>
-                        <input asp-for="Car.Model" type="model" for="model" class="form-control form-control-lg"/>
+                        <input asp-for="Car.Model" type="model" for="model" class="form-control form-control-lg" required/>
                      </div>
 
                      <div class="form-outline mb-4">
                         <label class="form-label" for="code">Chassis Code:</label>
-                        <input asp-for="Car.ChassisCode" type="code" for="code" class="form-control form-control-lg"/>
+                        <input asp-for="Car.ChassisCode" type="code" for="code" class="form-control form-control-lg" required/>
                      </div>
 
                       <div class="pt-1 mb-4">
