Small changes to visuals

--- a/AutomobileRepairShop/Views/Home/Index.cshtml
+++ b/AutomobileRepairShop/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
     <div class="w3-row-padding w3-padding-64" id="services">
         <div class="w3-quarter">
             <h2>Our Services</h2>
-            <p></p>
+            <p>Dedicated employees are working to bring you the best services on the market. Visuals department offers high quality paint and decals, while the mechanics have the fastest replacing times of car parts. Troubleshooting was never easier due to latest technology equipment present here. </p>
         </div>
 
         <div class="w3-quarter">
