--- a/AutomobileRepairShop/Views/Shared/Login.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Login.cshtml
@@ -26,13 +26,13 @@ ViewBag.Title = "Login";
 
                         <div class="form-outline mb-4">
                         @ViewBag.EmailNotExists
-                            <input asp-for="Email" type="email" id="email" class="form-control form-control-lg" />
+                            <input asp-for="Email" type="email" id="email" class="form-control form-control-lg" required/>
                             <label class="form-label" for="email">Email address</label>
                         </div>
 
                         <div class="form-outline mb-4">
                         @ViewBag.WrongPassword
-                            <input asp-for="Password" type="password" id="password" class="form-control form-control-lg" />
+                            <input asp-for="Password" type="password" id="password" class="form-control form-control-lg" required/>
                             <label class="form-label" for="password">Password</label>
                         </div>
 
@@ -40,14 +40,14 @@ ViewBag.Title = "Login";
                             <button class="btn btn-info btn-lg btn-block" type="submit">Login</button>
                         </div>
 
-                        <p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>
+                        @*<p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>*@
                         <p>Don't have an account? <a href="/Home/Register" class="link-info">Register here</a></p>
 
                     </form>
 
                 </div>
-
             </div>
+
             <div class="col-sm-6 px-0 d-none d-sm-block">
                 <img src="~/images/login-picture.jpg" alt="Login image" width=100% height=80% style="object-fit: cover; object-position: left;">
             </div>
