Fix login and register links and partialy fix search appointments in bills

--- a/AutomobileRepairShop/Views/Shared/Bills.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Bills.cshtml
@@ -37,6 +37,7 @@
         <div class="container-fluid" style="margin-bottom:25px">
             <label for="emailUser" class="form-label">Search for appointments by email:</label>
             <input type="email" class="form-control" id="emailUser">
+                    @ViewBag.Message
         </div>
 
         <div class="container-fluid" style="margin-bottom:25px">
