--- a/AutomobileRepairShop/Views/Shared/Login.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Login.cshtml
@@ -41,7 +41,7 @@ ViewBag.Title = "Login";
                         </div>
 
                         @*<p class="small mb-5 pb-lg-2"><a class="text-muted" href="#!">Forgot password?</a></p>*@
-                        <p>Don't have an account? <a href="/Home/Register" class="link-info">Register here</a></p>
+                        <p>Don't have an account? <a href="/Login/Register" class="link-info">Register here</a></p>
 
                     </form>
 
