--- a/AutomobileRepairShop/Views/Shared/Register.cshtml
+++ b/AutomobileRepairShop/Views/Shared/Register.cshtml
@@ -66,7 +66,7 @@
                             </div>
 
                             <!-- Login redirect  -->
-                            <p>Already have an account? <a href="/Home/Login" class="link-info">Login here</a></p>
+                            <p>Already have an account? <a href="/Login/Login" class="link-info">Login here</a></p>
 
                         </form> <!--end of form  -->
 
